--- a/spring-boot-sample-data-jpa-standalone/pom.xml
+++ b/spring-boot-sample-data-jpa-standalone/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-sample-data-jpa</artifactId>
-	<version>2.3.3.RELEASE</version>
+	<version>3.1.2</version>
 	<name>Spring Boot Data JPA Sample</name>
 	<description>Spring Boot Data JPA Sample</description>
 	<url>http://projects.spring.io/spring-boot/</url>
@@ -15,15 +15,21 @@
 	</organization>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 
 	</properties>
 	<dependencies>
+			<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.3.3.RELEASE</version>
+			<version>3.1.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -34,12 +40,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.3.3.RELEASE</version>
+			<version>3.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.5.1</version>
+			<version>2.7.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
@@ -64,7 +70,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>2.3.3.RELEASE</version>
+			<version>3.1.2</version>
 
 			<scope>test</scope>
 		</dependency>
@@ -74,7 +80,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.3.3.RELEASE</version>
+				<version>3.1.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -130,7 +136,7 @@
 											spring-boot-maven-plugin
 										</artifactId>
 										<versionRange>
-											[1.4.0.BUILD-SNAPSHOT,)
+											[3.1.2,)
 										</versionRange>
 										<goals>
 											<goal>build-info</goal>
