--- a/spring-boot-sample-data-jpa-standalone/pom.xml
+++ b/spring-boot-sample-data-jpa-standalone/pom.xml
@@ -74,6 +74,13 @@
 
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
