--- a/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
+++ b/spring-boot-sample-data-jpa-standalone/src/main/resources/application.properties
@@ -5,9 +5,10 @@ logging.level.org.hibernate.SQL=debug
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://localhost:3306/testspringdata?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = tlc
-spring.datasource.password = tlc
+spring.datasource.url = jdbc:mysql://localhost:3306/taa_database?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#jdbc:mysql://localhost:3306/testspringdata?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = my-secret-pw
 
 
 # Show or not log for each sql query
